javascript da calculadora, parte lógica implementada

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,11 +40,11 @@ body {
   .calculator-box-display-input {
     border: none;
     border-radius: 25px 25px 0 0;
-    padding: 30px 100px;
+    padding: 30px 30px;
     margin: 0 auto 2px auto;
-    width: 100%;
-    background-color: #FAF9F6;
-    color: #575048; }
+    width: 300px;
+    background-color: #575048;
+    color: #FAF9F6; }
 
 .calculator-box-buttons {
   display: grid;
@@ -62,10 +62,10 @@ body {
       background-color: #575048;
       color: #FAF9F6; }
   .calculator-box-buttons #result {
-    grid-column: span 3;
+    grid-column: span 2;
     border: none;
-    border-radius: 0 0 25px 25px;
-    background-color: #069e8c; }
+    border-radius: 0 0 25px 0;
+    background-color: #99db49; }
     .calculator-box-buttons #result:hover {
       background-color: #575048;
       color: #FAF9F6; }
@@ -75,8 +75,14 @@ body {
       background-color: #575048;
       color: #FAF9F6; }
   .calculator-box-buttons #point {
-    background-color: #99db49; }
+    background-color: #069e8c; }
     .calculator-box-buttons #point:hover {
+      background-color: #575048;
+      color: #FAF9F6; }
+  .calculator-box-buttons #clear {
+    background-color: #bf1010;
+    border-radius: 0 0 0 25px; }
+    .calculator-box-buttons #clear:hover {
       background-color: #575048;
       color: #FAF9F6; }
 
