--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -8,7 +8,7 @@ $blue-color: #069e8c
 $black-color: #211d19
 $white-color: #FAF9F6
 $gray-color: #575048
-$red-color: #9e064a
+$red-color: #bf1010
 $orange-color: #fdb736
 
 //reedefinindo página
@@ -63,11 +63,11 @@ body
             &-input
                 border: none
                 border-radius: 25px 25px 0 0
-                padding: 30px 100px
+                padding: 30px 30px
                 margin: 0 auto 2px auto
-                width: 100%
-                background-color: $white-color
-                color: $gray-color
+                width: 300px
+                background-color: $gray-color
+                color: $white-color
 
 //buttons
 
@@ -89,10 +89,10 @@ body
                     background-color: $gray-color
                     color: $white-color
             #result
-                grid-column: span 3
+                grid-column: span 2
                 border: none
-                border-radius: 0 0 25px 25px
-                background-color: $blue-color
+                border-radius: 0 0 25px 0
+                background-color: $green-color
                 &:hover
                     background-color: $gray-color
                     color: $white-color
@@ -102,7 +102,13 @@ body
                     background-color: $gray-color
                     color: $white-color
             #point
-                background-color: $green-color
+                background-color: $blue-color
+                &:hover
+                    background-color: $gray-color
+                    color: $white-color
+            #clear
+                background-color: $red-color
+                border-radius: 0 0 0 25px
                 &:hover
                     background-color: $gray-color
                     color: $white-color
